--- a/index.html
+++ b/index.html
@@ -2,32 +2,43 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شات ملوك العراق المطور</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>شات ملوك العراق</title>
     <style>
-        :root { --gold: #ffd700; --bg: #0b0b0b; --panel: #1a1a1a; }
-        body { background: var(--bg); color: white; font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; }
-        .header { background: var(--panel); padding: 15px; text-align: center; border-bottom: 2px solid var(--gold); font-weight: bold; font-size: 20px; }
-        #chat-box { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .msg { background: #333; padding: 10px; border-radius: 8px; max-width: 80%; border-right: 3px solid var(--gold); }
-        .input-area { background: var(--panel); padding: 15px; display: flex; gap: 10px; }
-        input { flex: 1; padding: 10px; border-radius: 5px; border: none; }
-        button { background: var(--gold); color: black; border: none; padding: 10px 20px; border-radius: 5px; font-weight: bold; cursor: pointer; }
+        body { background: #000; color: #fff; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0; height: 100vh; display: flex; flex-direction: column; }
+        .header { background: #1a1a1a; padding: 20px; text-align: center; border-bottom: 3px solid #ffd700; font-size: 22px; font-weight: bold; color: #ffd700; }
+        #chat-box { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; background: #0a0a0a; }
+        .msg { background: #222; padding: 12px 18px; border-radius: 15px; max-width: 85%; align-self: flex-start; border-right: 4px solid #ffd700; font-size: 16px; line-height: 1.5; }
+        .input-area { background: #1a1a1a; padding: 20px; display: flex; gap: 10px; border-top: 1px solid #333; }
+        input { flex: 1; padding: 15px; border-radius: 30px; border: 1px solid #ffd700; background: #000; color: #fff; font-size: 16px; outline: none; }
+        button { background: #ffd700; color: #000; border: none; padding: 0 25px; border-radius: 30px; font-weight: bold; font-size: 16px; cursor: pointer; min-width: 80px; }
+        button:active { transform: scale(0.95); background: #e6c200; }
     </style>
 </head>
 <body>
-    <div class="header">👑 غرفة دردشة ملوك العراق 👑</div>
+    <div class="header">👑 شات الملوك 👑</div>
     <div id="chat-box">
-        <div class="msg">أهلاً بك في النسخة المطورة! ابدأ الدردشة الآن..</div>
+        <div class="msg">مرحباً بك يا ملك! تم إصلاح الأزرار والتصميم الآن جاهز للدردشة.</div>
     </div>
-    <div class="input-area">
-        <input type="text" id="messageInput" placeholder="اكتب رسالتك هنا...">
-        <button onclick="sendMessage()">إرسال</button>
-    </div>
+    <form class="input-area" onsubmit="sendMessage(event)">
+        <input type="text" id="messageInput" placeholder="اكتب رسالتك هنا..." autocomplete="off">
+        <button type="submit">إرسال</button>
+    </form>
 
     <script>
-        function sendMessage() {
+        function sendMessage(e) {
+            e.preventDefault();
             const input = document.getElementById('messageInput');
             const box = document.getElementById('chat-box');
             if(input.value.trim() !== "") {
-                const
+                const div = document.createElement('div');
+                div.className = 'msg';
+                div.textContent = input.value;
+                box.appendChild(div);
+                input.value = "";
+                box.scrollTop = box.scrollHeight;
+            }
+        }
+    </script>
+</body>
+</html>
