--- a/index.html
+++ b/index.html
@@ -2,41 +2,96 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>شات ملوك العراق</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>إمبراطورية الشات</title>
     <style>
-        body { background: #000; color: #fff; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0; height: 100vh; display: flex; flex-direction: column; }
-        .header { background: #1a1a1a; padding: 20px; text-align: center; border-bottom: 3px solid #ffd700; font-size: 22px; font-weight: bold; color: #ffd700; }
-        #chat-box { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; background: #0a0a0a; }
-        .msg { background: #222; padding: 12px 18px; border-radius: 15px; max-width: 85%; align-self: flex-start; border-right: 4px solid #ffd700; font-size: 16px; line-height: 1.5; }
-        .input-area { background: #1a1a1a; padding: 20px; display: flex; gap: 10px; border-top: 1px solid #333; }
-        input { flex: 1; padding: 15px; border-radius: 30px; border: 1px solid #ffd700; background: #000; color: #fff; font-size: 16px; outline: none; }
-        button { background: #ffd700; color: #000; border: none; padding: 0 25px; border-radius: 30px; font-weight: bold; font-size: 16px; cursor: pointer; min-width: 80px; }
-        button:active { transform: scale(0.95); background: #e6c200; }
+        :root { --gold: #ffd700; --dark: #0a0a0a; --panel: #161616; }
+        body { background: var(--dark); color: white; font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
+        
+        /* الهيدر العلوي والأيقونات */
+        .main-header { background: var(--panel); padding: 10px 15px; border-bottom: 2px solid var(--gold); display: flex; justify-content: space-between; align-items: center; }
+        .header-icons { display: flex; gap: 15px; font-size: 20px; }
+        .icon-btn { cursor: pointer; position: relative; }
+        .badge { position: absolute; top: -5px; right: -10px; background: red; color: white; font-size: 10px; padding: 2px 5px; border-radius: 50%; }
+
+        /* المحتوى الرئيسي (شات + قائمة متصلين) */
+        .content { display: flex; flex: 1; overflow: hidden; }
+        
+        /* قائمة المتصلين على اليمين */
+        .users-list { width: 200px; background: var(--panel); border-left: 1px solid #333; display: flex; flex-direction: column; padding: 10px; }
+        .user-item { display: flex; align-items: center; gap: 10px; margin-bottom: 10px; padding: 5px; border-bottom: 1px solid #222; }
+        .user-img { width: 35px; height: 35px; border-radius: 50%; border: 1px solid var(--gold); }
+
+        /* منطقة الشات */
+        .chat-area { flex: 1; display: flex; flex-direction: column; background: #000; }
+        #chat-box { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg { background: #222; padding: 10px; border-radius: 10px; border-right: 3px solid var(--gold); max-width: 80%; }
+
+        /* الملف الشخصي (صورتين) */
+        .profile-card { background: var(--panel); padding: 10px; border-bottom: 1px solid #333; display: flex; align-items: center; gap: 15px; }
+        .cover-img { width: 60px; height: 60px; border-radius: 8px; object-fit: cover; border: 1px solid var(--gold); }
+        .avatar-img { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--gold); margin-right: -30px; margin-top: 20px; }
+
+        /* الإدخال */
+        .input-area { padding: 15px; background: var(--panel); display: flex; gap: 10px; }
+        input { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid var(--gold); background: #000; color: #fff; }
+        button { background: var(--gold); border: none; padding: 10px 20px; border-radius: 20px; font-weight: bold; cursor: pointer; }
     </style>
 </head>
 <body>
-    <div class="header">👑 شات الملوك 👑</div>
-    <div id="chat-box">
-        <div class="msg">مرحباً بك يا ملك! تم إصلاح الأزرار والتصميم الآن جاهز للدردشة.</div>
+
+    <div class="main-header">
+        <div style="color: var(--gold); font-weight: bold;">👑 مملكة الملوك</div>
+        <div class="header-icons">
+            <div class="icon-btn">💬 <span class="badge">2</span></div> <div class="icon-btn">🔔 <span class="badge">5</span></div> <div class="icon-btn">👤+ <span class="badge">1</span></div> </div>
     </div>
-    <form class="input-area" onsubmit="sendMessage(event)">
-        <input type="text" id="messageInput" placeholder="اكتب رسالتك هنا..." autocomplete="off">
-        <button type="submit">إرسال</button>
-    </form>
+
+    <div class="profile-card">
+        <div style="display: flex;">
+            <img src="https://via.placeholder.com/150" class="cover-img" alt="الغلاف">
+            <img src="https://via.placeholder.com/100" class="avatar-img" alt="الشخصية">
+        </div>
+        <div>
+            <div style="font-weight: bold; color: var(--gold);">الملك المحترف</div>
+            <div style="font-size: 12px; color: #aaa;">متصل الآن</div>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="chat-area">
+            <div id="chat-box">
+                <div class="msg">أهلاً بك في النسخة الاحترافية! القائمة على اليمين والأيقونات فوق.</div>
+            </div>
+            <div class="input-area">
+                <input type="text" id="msgIn" placeholder="اكتب هنا...">
+                <button onclick="send()">إرسال</button>
+            </div>
+        </div>
+
+        <div class="users-list">
+            <div style="color: var(--gold); margin-bottom: 10px; font-size: 14px;">المتصلين (3)</div>
+            <div class="user-item">
+                <img src="https://via.placeholder.com/50" class="user-img">
+                <span style="font-size: 13px;">أحمد العراقي</span>
+            </div>
+            <div class="user-item">
+                <img src="https://via.placeholder.com/50" class="user-img">
+                <span style="font-size: 13px;">سارة</span>
+            </div>
+        </div>
+    </div>
 
     <script>
-        function sendMessage(e) {
-            e.preventDefault();
-            const input = document.getElementById('messageInput');
-            const box = document.getElementById('chat-box');
-            if(input.value.trim() !== "") {
-                const div = document.createElement('div');
-                div.className = 'msg';
-                div.textContent = input.value;
-                box.appendChild(div);
-                input.value = "";
-                box.scrollTop = box.scrollHeight;
+        function send() {
+            const i = document.getElementById('msgIn');
+            const b = document.getElementById('chat-box');
+            if(i.value.trim()!="") {
+                const d = document.createElement('div');
+                d.className = 'msg';
+                d.textContent = i.value;
+                b.appendChild(d);
+                i.value = "";
+                b.scrollTop = b.scrollHeight;
             }
         }
     </script>
