--- a/index.html
+++ b/index.html
@@ -2,96 +2,92 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إمبراطورية الشات</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>شات الملوك VIP</title>
     <style>
-        :root { --gold: #ffd700; --dark: #0a0a0a; --panel: #161616; }
-        body { background: var(--dark); color: white; font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
+        :root { --gold: #ffd700; --bg: #000; --panel: #1a1a1a; }
+        body { background: var(--bg); color: white; font-family: sans-serif; margin: 0; padding: 0; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
         
-        /* الهيدر العلوي والأيقونات */
-        .main-header { background: var(--panel); padding: 10px 15px; border-bottom: 2px solid var(--gold); display: flex; justify-content: space-between; align-items: center; }
-        .header-icons { display: flex; gap: 15px; font-size: 20px; }
-        .icon-btn { cursor: pointer; position: relative; }
-        .badge { position: absolute; top: -5px; right: -10px; background: red; color: white; font-size: 10px; padding: 2px 5px; border-radius: 50%; }
+        /* الهيدر العلوي */
+        .header { background: var(--panel); padding: 10px; border-bottom: 2px solid var(--gold); display: flex; justify-content: space-between; align-items: center; z-index: 1000; }
+        .header-icons { display: flex; gap: 12px; }
+        .icon-btn { font-size: 18px; position: relative; cursor: pointer; background: #333; padding: 5px 8px; border-radius: 8px; }
+        .badge { position: absolute; top: -5px; right: -5px; background: red; color: white; font-size: 10px; padding: 2px 4px; border-radius: 50%; border: 1px solid white; }
 
-        /* المحتوى الرئيسي (شات + قائمة متصلين) */
-        .content { display: flex; flex: 1; overflow: hidden; }
-        
-        /* قائمة المتصلين على اليمين */
-        .users-list { width: 200px; background: var(--panel); border-left: 1px solid #333; display: flex; flex-direction: column; padding: 10px; }
-        .user-item { display: flex; align-items: center; gap: 10px; margin-bottom: 10px; padding: 5px; border-bottom: 1px solid #222; }
-        .user-img { width: 35px; height: 35px; border-radius: 50%; border: 1px solid var(--gold); }
+        /* منطقة المحتوى */
+        .main-container { flex: 1; display: flex; position: relative; overflow: hidden; }
 
         /* منطقة الشات */
-        .chat-area { flex: 1; display: flex; flex-direction: column; background: #000; }
-        #chat-box { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .msg { background: #222; padding: 10px; border-radius: 10px; border-right: 3px solid var(--gold); max-width: 80%; }
+        .chat-section { flex: 1; display: flex; flex-direction: column; background: #050505; }
+        #chat-messages { flex: 1; overflow-y: auto; padding: 10px; display: flex; flex-direction: column; gap: 8px; }
+        .msg { background: #1a1a1a; padding: 10px; border-radius: 12px; border-right: 3px solid var(--gold); max-width: 85%; font-size: 14px; }
 
-        /* الملف الشخصي (صورتين) */
-        .profile-card { background: var(--panel); padding: 10px; border-bottom: 1px solid #333; display: flex; align-items: center; gap: 15px; }
-        .cover-img { width: 60px; height: 60px; border-radius: 8px; object-fit: cover; border: 1px solid var(--gold); }
-        .avatar-img { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--gold); margin-right: -30px; margin-top: 20px; }
+        /* قائمة المتصلين (مخفية وتظهر بالضغط) */
+        .sidebar { width: 150px; background: var(--panel); border-left: 1px solid var(--gold); padding: 10px; display: flex; flex-direction: column; gap: 10px; }
+        .user { display: flex; align-items: center; gap: 8px; font-size: 12px; border-bottom: 1px solid #333; padding-bottom: 5px; }
+        .user img { width: 25px; height: 25px; border-radius: 50%; border: 1px solid var(--gold); }
 
-        /* الإدخال */
-        .input-area { padding: 15px; background: var(--panel); display: flex; gap: 10px; }
-        input { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid var(--gold); background: #000; color: #fff; }
-        button { background: var(--gold); border: none; padding: 10px 20px; border-radius: 20px; font-weight: bold; cursor: pointer; }
+        /* صندوق الإدخال */
+        .input-box { padding: 10px; background: var(--panel); display: flex; gap: 8px; border-top: 1px solid #333; }
+        input { flex: 1; padding: 10px; border-radius: 20px; border: 1px solid var(--gold); background: #000; color: white; outline: none; }
+        button { background: var(--gold); color: black; border: none; padding: 0 15px; border-radius: 20px; font-weight: bold; }
+
+        /* الملف الشخصي الصغير */
+        .mini-profile { background: #111; padding: 8px; display: flex; align-items: center; gap: 10px; border-bottom: 1px solid #222; }
+        .p-imgs { position: relative; width: 45px; height: 45px; }
+        .c-img { width: 100%; height: 100%; border-radius: 5px; object-fit: cover; }
+        .a-img { width: 25px; height: 25px; border-radius: 50%; border: 2px solid var(--gold); position: absolute; bottom: 0; right: 0; }
     </style>
 </head>
 <body>
 
-    <div class="main-header">
-        <div style="color: var(--gold); font-weight: bold;">👑 مملكة الملوك</div>
+    <div class="header">
+        <span style="color: var(--gold); font-weight: bold;">👑 مملكة الملوك</span>
         <div class="header-icons">
-            <div class="icon-btn">💬 <span class="badge">2</span></div> <div class="icon-btn">🔔 <span class="badge">5</span></div> <div class="icon-btn">👤+ <span class="badge">1</span></div> </div>
-    </div>
-
-    <div class="profile-card">
-        <div style="display: flex;">
-            <img src="https://via.placeholder.com/150" class="cover-img" alt="الغلاف">
-            <img src="https://via.placeholder.com/100" class="avatar-img" alt="الشخصية">
-        </div>
-        <div>
-            <div style="font-weight: bold; color: var(--gold);">الملك المحترف</div>
-            <div style="font-size: 12px; color: #aaa;">متصل الآن</div>
+            <div class="icon-btn">💬 <span class="badge">1</span></div>
+            <div class="icon-btn">🔔 <span class="badge">3</span></div>
+            <div class="icon-btn">👥 <span class="badge">0</span></div>
         </div>
     </div>
 
-    <div class="content">
-        <div class="chat-area">
-            <div id="chat-box">
-                <div class="msg">أهلاً بك في النسخة الاحترافية! القائمة على اليمين والأيقونات فوق.</div>
+    <div class="mini-profile">
+        <div class="p-imgs">
+            <img src="https://via.placeholder.com/50" class="c-img">
+            <img src="https://via.placeholder.com/30" class="a-img">
+        </div>
+        <div style="font-size: 14px; font-weight: bold; color: var(--gold);">الملك المحترف</div>
+    </div>
+
+    <div class="main-container">
+        <div class="chat-section">
+            <div id="chat-messages">
+                <div class="msg">تم تعديل التصميم يا ملك! الآن كل شيء في مكانه الصحيح.</div>
             </div>
-            <div class="input-area">
-                <input type="text" id="msgIn" placeholder="اكتب هنا...">
-                <button onclick="send()">إرسال</button>
+            <div class="input-box">
+                <input type="text" id="mIn" placeholder="اكتب هنا...">
+                <button onclick="s()">إرسال</button>
             </div>
         </div>
 
-        <div class="users-list">
-            <div style="color: var(--gold); margin-bottom: 10px; font-size: 14px;">المتصلين (3)</div>
-            <div class="user-item">
-                <img src="https://via.placeholder.com/50" class="user-img">
-                <span style="font-size: 13px;">أحمد العراقي</span>
-            </div>
-            <div class="user-item">
-                <img src="https://via.placeholder.com/50" class="user-img">
-                <span style="font-size: 13px;">سارة</span>
-            </div>
+        <div class="sidebar">
+            <div style="color: var(--gold); font-size: 11px;">المتصلين (3)</div>
+            <div class="user"><img src="https://via.placeholder.com/20"><span>أحمد</span></div>
+            <div class="user"><img src="https://via.placeholder.com/20"><span>سارة</span></div>
+            <div class="user"><img src="https://via.placeholder.com/20"><span>علي</span></div>
         </div>
     </div>
 
     <script>
-        function send() {
-            const i = document.getElementById('msgIn');
-            const b = document.getElementById('chat-box');
+        function s() {
+            const i = document.getElementById('mIn');
+            const m = document.getElementById('chat-messages');
             if(i.value.trim()!="") {
                 const d = document.createElement('div');
                 d.className = 'msg';
                 d.textContent = i.value;
-                b.appendChild(d);
+                m.appendChild(d);
                 i.value = "";
-                b.scrollTop = b.scrollHeight;
+                m.scrollTop = m.scrollHeight;
             }
         }
     </script>
