--- a/index.html
+++ b/index.html
@@ -2,19 +2,49 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>شات الملوك</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مملكة الملوك</title>
     <style>
         body { background: #000; color: #fff; font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; }
-        .top-bar { background: #1a1a1a; padding: 10px; display: flex; justify-content: space-between; border-bottom: 2px solid #ffd700; }
-        .icons { display: flex; gap: 15px; font-size: 18px; }
-        .badge { background: red; color: white; border-radius: 50%; padding: 2px 6px; font-size: 10px; position: absolute; margin-right: 12px; }
-        .container { flex: 1; display: flex; overflow: hidden; }
-        .chat { flex: 1; display: flex; flex-direction: column; background: #0a0a0a; }
-        #msgs { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .msg { background: #222; padding: 10px; border-radius: 10px; border-right: 4px solid #ffd700; max-width: 80%; }
-        .side { width: 120px; background: #111; border-left: 1px solid #333; padding: 10px; }
-        .u { display: flex; align-items: center; gap: 5px; font-size: 12px; margin-bottom: 10px; }
-        .u img { width: 30px; height: 30px; border-radius: 50%; border: 1px solid #ffd700; }
-        .input-box { background: #1a1a1a; padding: 15px; display: flex; gap: 10px; }
-        input { flex: 1; padding: 10px; border-radius: 20px; border: 1px solid #
+        .nav { background: #1a1a1a; padding: 15px; display: flex; justify-content: space-between; border-bottom: 2px solid #ffd700; }
+        .icons { display: flex; gap: 20px; font-size: 20px; }
+        .main { flex: 1; display: flex; overflow: hidden; }
+        .side { width: 130px; background: #111; border-left: 1px solid #333; padding: 10px; }
+        .chat { flex: 1; display: flex; flex-direction: column; padding: 10px; }
+        #box { flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
+        .m { background: #222; padding: 10px; border-radius: 10px; border-right: 3px solid #ffd700; width: fit-content; max-width: 85%; }
+        .in-bar { padding: 15px; background: #1a1a1a; display: flex; gap: 10px; }
+        input { flex: 1; padding: 10px; border-radius: 20px; border: 1px solid #ffd700; background: #000; color: #fff; }
+        button { background: #ffd700; border: none; padding: 10px 20px; border-radius: 20px; font-weight: bold; }
+    </style>
+</head>
+<body>
+    <div class="nav">
+        <b style="color:#ffd700">👑 شات الملوك</b>
+        <div class="icons"><span>💬</span><span>🔔</span><span>👤</span></div>
+    </div>
+    <div class="main">
+        <div class="chat">
+            <div id="box"><div class="m">الرابط اشتغل! نورتنا يا ملك.</div></div>
+        </div>
+        <div class="side">
+            <p style="color:#ffd700; font-size:12px">المتصلين</p>
+            <div style="font-size:12px">👤 أحمد</div>
+            <div style="font-size:12px">👤 سارة</div>
+        </div>
+    </div>
+    <div class="in-bar">
+        <input type="text" id="i" placeholder="اكتب هنا...">
+        <button onclick="s()">إرسال</button>
+    </div>
+    <script>
+        function s() {
+            var i=document.getElementById('i'), b=document.getElementById('box');
+            if(i.value.trim()!="") {
+                var d=document.createElement('div'); d.className='m'; d.textContent=i.value;
+                b.appendChild(d); i.value=""; b.scrollTop=b.scrollHeight;
+            }
+        }
+    </script>
+</body>
+</html>
