--- a/index.html
+++ b/index.html
@@ -2,47 +2,92 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مملكة الملوك</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>إمبراطورية الشات</title>
     <style>
-        body { background: #000; color: #fff; font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; }
-        .nav { background: #1a1a1a; padding: 15px; display: flex; justify-content: space-between; border-bottom: 2px solid #ffd700; }
-        .icons { display: flex; gap: 20px; font-size: 20px; }
-        .main { flex: 1; display: flex; overflow: hidden; }
-        .side { width: 130px; background: #111; border-left: 1px solid #333; padding: 10px; }
-        .chat { flex: 1; display: flex; flex-direction: column; padding: 10px; }
-        #box { flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
-        .m { background: #222; padding: 10px; border-radius: 10px; border-right: 3px solid #ffd700; width: fit-content; max-width: 85%; }
-        .in-bar { padding: 15px; background: #1a1a1a; display: flex; gap: 10px; }
-        input { flex: 1; padding: 10px; border-radius: 20px; border: 1px solid #ffd700; background: #000; color: #fff; }
-        button { background: #ffd700; border: none; padding: 10px 20px; border-radius: 20px; font-weight: bold; }
+        :root { --gold: #ffd700; --accent: #ff4500; --glass: rgba(255, 255, 255, 0.1); }
+        body { background: radial-gradient(circle, #1a1a1a, #000); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        
+        /* الهيدر العلوي الاحترافي */
+        .navbar { background: rgba(0,0,0,0.8); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--gold); backdrop-filter: blur(10px); }
+        .nav-brand { font-size: 20px; font-weight: bold; color: var(--gold); text-shadow: 0 0 10px rgba(255,215,0,0.5); }
+        .nav-icons { display: flex; gap: 15px; }
+        .icon { position: relative; font-size: 22px; cursor: pointer; transition: 0.3s; }
+        .icon:hover { transform: scale(1.2); }
+        .dot { position: absolute; top: -2px; right: -5px; background: var(--accent); width: 8px; height: 8px; border-radius: 50%; border: 1px solid white; }
+
+        .wrapper { display: flex; flex: 1; overflow: hidden; }
+
+        /* منطقة الشات الرئيسية */
+        .chat-main { flex: 1; display: flex; flex-direction: column; position: relative; }
+        #chat-screen { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; scroll-behavior: smooth; }
+        .bubble { background: var(--glass); padding: 12px 18px; border-radius: 20px 20px 0 20px; align-self: flex-start; border: 1px solid rgba(255,215,0,0.2); max-width: 80%; box-shadow: 0 4px 15px rgba(0,0,0,0.3); }
+
+        /* قائمة المتصلين الجانبية */
+        .users-sidebar { width: 80px; background: rgba(26,26,26,0.9); border-left: 1px solid #333; display: flex; flex-direction: column; align-items: center; padding: 15px 0; gap: 15px; }
+        .user-avatar { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--gold); padding: 2px; position: relative; }
+        .user-avatar img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; }
+        .status { position: absolute; bottom: 2px; right: 2px; width: 10px; height: 10px; background: #00ff00; border-radius: 50%; border: 2px solid #1a1a1a; }
+
+        /* صندوق الإدخال السفلي */
+        .input-bar { padding: 15px; background: #111; display: flex; gap: 10px; align-items: center; border-top: 1px solid #333; }
+        .msg-input { flex: 1; background: #222; border: 1px solid #444; padding: 12px 20px; border-radius: 30px; color: white; outline: none; transition: 0.3s; }
+        .msg-input:focus { border-color: var(--gold); box-shadow: 0 0 10px rgba(255,215,0,0.2); }
+        .send-btn { background: var(--gold); border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: 0.3s; }
+        .send-btn:active { transform: rotate(-45deg) scale(0.9); }
     </style>
 </head>
 <body>
-    <div class="nav">
-        <b style="color:#ffd700">👑 شات الملوك</b>
-        <div class="icons"><span>💬</span><span>🔔</span><span>👤</span></div>
-    </div>
-    <div class="main">
-        <div class="chat">
-            <div id="box"><div class="m">الرابط اشتغل! نورتنا يا ملك.</div></div>
-        </div>
-        <div class="side">
-            <p style="color:#ffd700; font-size:12px">المتصلين</p>
-            <div style="font-size:12px">👤 أحمد</div>
-            <div style="font-size:12px">👤 سارة</div>
+
+    <div class="navbar">
+        <div class="nav-brand">👑 إمبراطورية الملوك</div>
+        <div class="nav-icons">
+            <div class="icon">💬<span class="dot"></span></div>
+            <div class="icon">🔔<span class="dot"></span></div>
+            <div class="icon">👥</div>
         </div>
     </div>
-    <div class="in-bar">
-        <input type="text" id="i" placeholder="اكتب هنا...">
-        <button onclick="s()">إرسال</button>
+
+    <div class="wrapper">
+        <div class="chat-main">
+            <div id="chat-screen">
+                <div class="bubble">أهلاً بك يا إمبراطور! تم تحديث الواجهة لأعلى مستوى. جرب الكتابة الآن..</div>
+            </div>
+            
+            <form class="input-bar" onsubmit="sendMsg(event)">
+                <input type="text" id="userInput" class="msg-input" placeholder="اكتب رسالتك الملكية..." autocomplete="off">
+                <button type="submit" class="send-btn">✈️</button>
+            </form>
+        </div>
+
+        <div class="users-sidebar">
+            <div class="user-avatar">
+                <img src="https://i.pravatar.cc/150?u=king" alt="me">
+                <div class="status"></div>
+            </div>
+            <div style="border-bottom: 1px solid #333; width: 60%;"></div>
+            <div class="user-avatar"><img src="https://i.pravatar.cc/150?u=1"><div class="status"></div></div>
+            <div class="user-avatar"><img src="https://i.pravatar.cc/150?u=2"><div class="status"></div></div>
+            <div class="user-avatar"><img src="https://i.pravatar.cc/150?u=3"><div class="status"></div></div>
+        </div>
     </div>
+
     <script>
-        function s() {
-            var i=document.getElementById('i'), b=document.getElementById('box');
-            if(i.value.trim()!="") {
-                var d=document.createElement('div'); d.className='m'; d.textContent=i.value;
-                b.appendChild(d); i.value=""; b.scrollTop=b.scrollHeight;
+        function sendMsg(e) {
+            e.preventDefault();
+            const input = document.getElementById('userInput');
+            const screen = document.getElementById('chat-screen');
+            if(input.value.trim() !== "") {
+                const div = document.createElement('div');
+                div.className = 'bubble';
+                div.style.alignSelf = 'flex-end';
+                div.style.background = 'linear-gradient(45deg, #ffd700, #ff8c00)';
+                div.style.color = 'black';
+                div.style.fontWeight = 'bold';
+                div.textContent = input.value;
+                screen.appendChild(div);
+                input.value = "";
+                screen.scrollTop = screen.scrollHeight;
             }
         }
     </script>
