Update chat interface and styles

--- a/index.html
+++ b/index.html
@@ -3,91 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية الشات</title>
+    <title>شات العراق | شذر الكلام</title>
     <style>
-        :root { --gold: #ffd700; --accent: #ff4500; --glass: rgba(255, 255, 255, 0.1); }
-        body { background: radial-gradient(circle, #1a1a1a, #000); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        :root { --main-gold: #ffd700; --bg-dark: #0f0f0f; --panel: #1a1a1a; }
+        body { background: var(--bg-dark); color: white; font-family: 'Cairo', sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         
-        /* الهيدر العلوي الاحترافي */
-        .navbar { background: rgba(0,0,0,0.8); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--gold); backdrop-filter: blur(10px); }
-        .nav-brand { font-size: 20px; font-weight: bold; color: var(--gold); text-shadow: 0 0 10px rgba(255,215,0,0.5); }
-        .nav-icons { display: flex; gap: 15px; }
-        .icon { position: relative; font-size: 22px; cursor: pointer; transition: 0.3s; }
-        .icon:hover { transform: scale(1.2); }
-        .dot { position: absolute; top: -2px; right: -5px; background: var(--accent); width: 8px; height: 8px; border-radius: 50%; border: 1px solid white; }
+        /* الهيدر العلوي - مستوحى من shilah.site */
+        .header { background: var(--panel); padding: 12px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--main-gold); box-shadow: 0 2px 10px rgba(0,0,0,0.5); z-index: 100; }
+        .logo { font-size: 18px; font-weight: bold; color: var(--main-gold); display: flex; align-items: center; gap: 8px; }
+        .nav-btns { display: flex; gap: 10px; }
+        .btn-icon { background: #333; border: 1px solid var(--main-gold); border-radius: 8px; padding: 6px 10px; cursor: pointer; position: relative; font-size: 16px; transition: 0.3s; }
+        .btn-icon:active { background: var(--main-gold); color: black; }
+        .badge { position: absolute; top: -5px; right: -5px; background: red; color: white; font-size: 10px; padding: 2px 5px; border-radius: 50%; font-weight: bold; }
 
-        .wrapper { display: flex; flex: 1; overflow: hidden; }
+        /* منطقة المحتوى */
+        .app-body { flex: 1; display: flex; overflow: hidden; }
 
-        /* منطقة الشات الرئيسية */
-        .chat-main { flex: 1; display: flex; flex-direction: column; position: relative; }
-        #chat-screen { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; scroll-behavior: smooth; }
-        .bubble { background: var(--glass); padding: 12px 18px; border-radius: 20px 20px 0 20px; align-self: flex-start; border: 1px solid rgba(255,215,0,0.2); max-width: 80%; box-shadow: 0 4px 15px rgba(0,0,0,0.3); }
+        /* قائمة المتصلين الجانبية (يمين) */
+        .sidebar { width: 140px; background: #111; border-left: 1px solid #222; display: flex; flex-direction: column; padding: 10px; }
+        .sidebar-title { color: var(--main-gold); font-size: 12px; margin-bottom: 15px; text-align: center; border-bottom: 1px solid #333; padding-bottom: 5px; }
+        .user-row { display: flex; align-items: center; gap: 8px; margin-bottom: 12px; font-size: 13px; cursor: pointer; padding: 5px; border-radius: 5px; }
+        .user-row:hover { background: #222; }
+        .user-row img { width: 30px; height: 30px; border-radius: 50%; border: 1px solid var(--main-gold); }
 
-        /* قائمة المتصلين الجانبية */
-        .users-sidebar { width: 80px; background: rgba(26,26,26,0.9); border-left: 1px solid #333; display: flex; flex-direction: column; align-items: center; padding: 15px 0; gap: 15px; }
-        .user-avatar { width: 45px; height: 45px; border-radius: 50%; border: 2px solid var(--gold); padding: 2px; position: relative; }
-        .user-avatar img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; }
-        .status { position: absolute; bottom: 2px; right: 2px; width: 10px; height: 10px; background: #00ff00; border-radius: 50%; border: 2px solid #1a1a1a; }
+        /* منطقة الدردشة */
+        .chat-container { flex: 1; display: flex; flex-direction: column; background: #050505; }
+        #chat-window { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
+        .msg { background: #222; padding: 10px 14px; border-radius: 12px; border-right: 3px solid var(--main-gold); max-width: 85%; align-self: flex-start; line-height: 1.4; font-size: 14px; }
 
-        /* صندوق الإدخال السفلي */
-        .input-bar { padding: 15px; background: #111; display: flex; gap: 10px; align-items: center; border-top: 1px solid #333; }
-        .msg-input { flex: 1; background: #222; border: 1px solid #444; padding: 12px 20px; border-radius: 30px; color: white; outline: none; transition: 0.3s; }
-        .msg-input:focus { border-color: var(--gold); box-shadow: 0 0 10px rgba(255,215,0,0.2); }
-        .send-btn { background: var(--gold); border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: 0.3s; }
-        .send-btn:active { transform: rotate(-45deg) scale(0.9); }
+        /* صندوق الإرسال */
+        .footer { padding: 12px; background: var(--panel); border-top: 1px solid #333; display: flex; gap: 10px; }
+        .input-chat { flex: 1; background: #000; border: 1px solid #444; border-radius: 25px; padding: 10px 15px; color: white; outline: none; }
+        .input-chat:focus { border-color: var(--main-gold); }
+        .send-btn { background: var(--main-gold); border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; font-size: 18px; font-weight: bold; }
     </style>
 </head>
 <body>
 
-    <div class="navbar">
-        <div class="nav-brand">👑 إمبراطورية الملوك</div>
-        <div class="nav-icons">
-            <div class="icon">💬<span class="dot"></span></div>
-            <div class="icon">🔔<span class="dot"></span></div>
-            <div class="icon">👥</div>
+    <div class="header">
+        <div class="logo">👑 شات شذر الكلام</div>
+        <div class="nav-btns">
+            <div class="btn-icon" onclick="alert('طلب صداقة جديد')">👥 <span class="badge">1</span></div>
+            <div class="btn-icon" onclick="alert('لا توجد بلاغات حالياً')">🔔 <span class="badge">0</span></div>
+            <div class="btn-icon" onclick="alert('فتح الدردشة الخاصة')">💬 <span class="badge">3</span></div>
         </div>
     </div>
 
-    <div class="wrapper">
-        <div class="chat-main">
-            <div id="chat-screen">
-                <div class="bubble">أهلاً بك يا إمبراطور! تم تحديث الواجهة لأعلى مستوى. جرب الكتابة الآن..</div>
+    <div class="app-body">
+        <div class="chat-container">
+            <div id="chat-window">
+                <div class="msg">أهلاً بك في "شذر الكلام"! التصميم الآن جاهز ومشابه للموقع الذي طلبته.</div>
             </div>
             
-            <form class="input-bar" onsubmit="sendMsg(event)">
-                <input type="text" id="userInput" class="msg-input" placeholder="اكتب رسالتك الملكية..." autocomplete="off">
-                <button type="submit" class="send-btn">✈️</button>
+            <form class="footer" onsubmit="doSend(event)">
+                <input type="text" id="chatInput" class="input-chat" placeholder="اكتب رسالتك..." autocomplete="off">
+                <button type="submit" class="send-btn">↩</button>
             </form>
         </div>
 
-        <div class="users-sidebar">
-            <div class="user-avatar">
-                <img src="https://i.pravatar.cc/150?u=king" alt="me">
-                <div class="status"></div>
-            </div>
-            <div style="border-bottom: 1px solid #333; width: 60%;"></div>
-            <div class="user-avatar"><img src="https://i.pravatar.cc/150?u=1"><div class="status"></div></div>
-            <div class="user-avatar"><img src="https://i.pravatar.cc/150?u=2"><div class="status"></div></div>
-            <div class="user-avatar"><img src="https://i.pravatar.cc/150?u=3"><div class="status"></div></div>
+        <div class="sidebar">
+            <div class="sidebar-title">المتصلون الآن</div>
+            <div class="user-row"><img src="https://i.pravatar.cc/100?u=1"><span>الملك</span></div>
+            <div class="user-row"><img src="https://i.pravatar.cc/100?u=2"><span>عراقي</span></div>
+            <div class="user-row"><img src="https://i.pravatar.cc/100?u=3"><span>سارة</span></div>
         </div>
     </div>
 
     <script>
-        function sendMsg(e) {
+        function doSend(e) {
             e.preventDefault();
-            const input = document.getElementById('userInput');
-            const screen = document.getElementById('chat-screen');
-            if(input.value.trim() !== "") {
+            const inp = document.getElementById('chatInput');
+            const win = document.getElementById('chat-window');
+            if(inp.value.trim() !== "") {
                 const div = document.createElement('div');
-                div.className = 'bubble';
-                div.style.alignSelf = 'flex-end';
-                div.style.background = 'linear-gradient(45deg, #ffd700, #ff8c00)';
-                div.style.color = 'black';
-                div.style.fontWeight = 'bold';
-                div.textContent = input.value;
-                screen.appendChild(div);
-                input.value = "";
-                screen.scrollTop = screen.scrollHeight;
+                div.className = 'msg';
+                div.textContent = inp.value;
+                win.appendChild(div);
+                inp.value = "";
+                win.scrollTop = win.scrollHeight;
             }
         }
     </script>
