--- a/index.html
+++ b/index.html
@@ -3,62 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شذر الكلام - الدردشة الأصلية</title>
+    <title>علوش - الدخول</title>
     <style>
-        body { background: #f4f7f6; color: #333; font-family: sans-serif; margin: 0; }
+        body { background: #f4f7f6; font-family: sans-serif; margin: 0; }
+        /* صفحة الدخول */
+        #login-page { display: flex; flex-direction: column; align-items: center; padding: 50px 20px; }
+        .btn { width: 100%; max-width: 300px; padding: 15px; border-radius: 30px; border: none; font-weight: bold; cursor: pointer; margin-bottom: 10px; }
+        .btn-guest { background: #00acc1; color: white; }
         
-        /* الهيدر الأبيض مالتهم */
-        .header { background: #fff; padding: 15px; text-align: center; border-bottom: 3px solid #00acc1; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .header h1 { margin: 0; color: #00acc1; font-size: 22px; }
-
-        /* أزرار الدخول الكبيرة */
-        .login-container { padding: 40px 20px; display: flex; flex-direction: column; gap: 15px; align-items: center; }
-        .btn { width: 100%; max-width: 300px; padding: 15px; border-radius: 30px; border: none; font-weight: bold; font-size: 16px; cursor: pointer; transition: 0.3s; text-align: center; }
-        .btn-guest { background: #00acc1; color: white; box-shadow: 0 4px 10px rgba(0,172,193,0.3); }
-        .btn-login { background: #fff; color: #00acc1; border: 2px solid #00acc1; }
-        
-        /* قائمة الغرف (مثل الموقع) */
-        .rooms { padding: 20px; }
-        .room-card { background: white; padding: 15px; border-radius: 10px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center; border-right: 5px solid #00acc1; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        .room-info b { color: #444; }
-        .online-count { background: #e0f7fa; color: #00acc1; padding: 2px 8px; border-radius: 10px; font-size: 12px; }
-
-        /* أيقونات الخاص والطلبات تحت */
-        .footer-nav { position: fixed; bottom: 0; width: 100%; background: #fff; display: flex; justify-content: space-around; padding: 10px 0; border-top: 1px solid #ddd; }
-        .nav-item { font-size: 20px; cursor: pointer; position: relative; }
-        .dot { position: absolute; top: 0; right: 0; width: 8px; height: 8px; background: red; border-radius: 50%; }
+        /* صفحة الشات (مخفية في البداية) */
+        #chat-page { display: none; height: 100vh; flex-direction: column; background: #000; color: #fff; }
+        .header { background: #fff; color: #00acc1; padding: 15px; text-align: center; border-bottom: 2px solid #00acc1; }
+        #msgs { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .m { background: #222; padding: 10px; border-radius: 10px; border-right: 3px solid #00acc1; width: fit-content; }
+        .input-area { padding: 15px; background: #1a1a1a; display: flex; gap: 10px; }
+        input { flex: 1; padding: 10px; border-radius: 20px; border: 1px solid #00acc1; background: #000; color: #fff; }
     </style>
 </head>
 <body>
 
-    <div class="header">
-        <h1>🔥 شذر الكلام 🔥</h1>
-        <p style="font-size: 12px; margin: 5px 0 0;">عالم المحادثة العراقية بدون تعقيد</p>
+    <div id="login-page">
+        <h1 style="color: #00acc1;">🔥 علوش🔥</h1>
+        <button class="btn btn-guest" onclick="enterChat()">⏳ دخول الزوار</button>
+        <p style="font-size: 12px; color: #666;">عالم المحادثة العراقية بدون تعقيد</p>
     </div>
 
-    <div class="login-container">
-        <button class="btn btn-guest" onclick="alert('جاري دخول الزوار...')">⏳ دخول الزوار</button>
-        <button class="btn btn-login" onclick="alert('فتح صفحة التسجيل...')">👤 تسجيل الدخول</button>
-    </div>
-
-    <div class="rooms">
-        <div style="font-weight: bold; margin-bottom: 10px; color: #666;">الغرف المتاحة:</div>
-        <div class="room-card">
-            <div class="room-info"><b>🇮🇶 رومات العراق العامة</b></div>
-            <span class="online-count">145 متصل</span>
+    <div id="chat-page">
+        <div class="header">👑 غرفة دردشة العراق العامة</div>
+        <div id="msgs">
+            <div class="m">أهلاً بك يا زائر! نورت علوش .</div>
         </div>
-        <div class="room-card">
-            <div class="room-info"><b>🤝 غرف التعارف والجوالي</b></div>
-            <span class="online-count">89 متصل</span>
+        <div class="input-area">
+            <input type="text" id="msgIn" placeholder="اكتب رسالتك...">
+            <button onclick="send()" style="background:#00acc1; color:#fff; border:none; border-radius:20px; padding:10px 20px;">إرسال</button>
         </div>
     </div>
 
-    <div class="footer-nav">
-        <div class="nav-item">💬 <div class="dot"></div></div>
-        <div class="nav-item">🔔</div>
-        <div class="nav-item">👤+</div>
-        <div class="nav-item">⚙️</div>
-    </div>
-
+    <script>
+        function enterChat() {
+            document.getElementById('login-page').style.display = 'none';
+            document.getElementById('chat-page').style.display = 'flex';
+        }
+        function send() {
+            var i = document.getElementById('msgIn'), m = document.getElementById('msgs');
+            if(i.value.trim()!="") {
+                var d = document.createElement('div'); d.className='m'; d.textContent=i.value;
+                m.appendChild(d); i.value=""; m.scrollTop=m.scrollHeight;
+            }
+        }
+    </script>
 </body>
 </html>
